--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>{{title}} v3</title>
     <!--<link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
