--- a/views/addprop.hbs
+++ b/views/addprop.hbs
@@ -1,10 +1,32 @@
 
+
+<div class="w3-panel w3-pale-green w3-leftbar
+ w3-rightbar w3-topbar w3-border-green w3-margin-right w3-margin-left">
+<table width = "100%" border = 0 >
+
+<tr><td>
+  <font family = 'courier' size='5'><b>DealTrak</b> - Add a Property</font>
+</td><td align = "right">
+<a href = '/portfolio/{{userObj.id}}'>{{userObj.firstname}}</a>&emsp;<img width='50' src={{userObj.photo}}>
+</td></tr>
+
+<tr><td align = "left">
+  <a href = "/">Home</a>&emsp;<a href = "/investors">Investors</a>&emsp;<a href = "/properties">Properties</a>&emsp;
+</td><td>
+</td><td align = "right">
+</td></tr>
+
+<tr><td>
+<br>
+{{message}}
+</td></tr>
+</table>
+</div>
+
 <form action = "{{postendpoint}}" method = "POST">
-<br><br>
 <div class="w3-panel w3-pale-green w3-leftbar
           w3-rightbar w3-border-green w3-margin-right w3-margin-left">
-<h2>Add a New Property</h2>
-
+<br>
 <table>
 <tr>
 	<td>
@@ -37,4 +59,4 @@
 </table>
       </form>
 </div>
-&emsp;&emsp;props2 POST
+&emsp;&emsp;props3 POST
