adding bcrypt for passwords

--- a/views/viewprop.hbs
+++ b/views/viewprop.hbs
@@ -51,7 +51,7 @@
           <td></td>
           <td >{{property.units}} units</td>
           <td>${{property.propValue}} M</td>
-          <td align="left">
+          <td align="left"><a href = '/delete/{{property.id}}'><img width="45" src = "../static/trash-black-512.png"></a>
           </td>
       </tr>
       <tr>
