--- a/views/delprop.hbs
+++ b/views/delprop.hbs
@@ -1,10 +1,24 @@
 
+<div class="w3-panel w3-pale-green w3-leftbar
+ w3-rightbar w3-topbar w3-border-green w3-margin-right w3-margin-left">
+<table width = "100%" border = 0 >
 
-<center>
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-</center>
-&emsp; &emsp;<a href = "/list">Home</a>&emsp;<br><br>
+<tr><td>
+  <font family = 'courier' size='5'><b>DealTrak</b> - Delete Proprty</font>
+</td><td align = "right">
+<a href = '/portfolio/{{userObj.id}}'>{{userObj.firstname}}</a>&emsp;<img width='50' src={{userObj.photo}}>
+</td></tr>
+
+<tr><td align = "left">
+  <a href = "/">Home</a>&emsp;<a href = "/investors">Investors</a>&emsp;<a href = "/properties">Properties</a>&emsp;
+</td><td>
+</td><td align = "right">
+</td></tr>
+<tr><td>
+{{message}}
+</td></tr>
+</table>
+</div>
 {{#if property}}
 
 <div class="w3-panel w3-pale-green w3-leftbar
