added investor list

--- a/views/list.hbs
+++ b/views/list.hbs
@@ -54,7 +54,7 @@
           <td >{{units}} units</td>
           <td>${{propValue}} M *</td>
           <td align="left">
-                <a href = "/view/{{id}}"><img width="30" src = "../static/file-black-512.png"></a>
+                <a href = "/viewprop/{{id}}"><img width="30" src = "../static/file-black-512.png"></a>
           </td>
       </tr>
       <tr>
@@ -73,5 +73,5 @@
  {{/if}}
   &emsp; &emsp;* Property Value calculated using CAPM.
 <br><br>
- &emsp; &emsp;Session:{{sessioninfo}}
+ &emsp; &emsp;
  <br><br>
