--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,7 +11,7 @@
 	<td>
 	Email:
 	</td><td>
-	<input type = "text" name = "username" value="sam2@gmail.com">  <br>
+	<input type = "text" name = "username" value="alex@gmail.com">  <br>
     </td>
 </tr>
 
