--- a/views/portfolio.hbs
+++ b/views/portfolio.hbs
@@ -57,7 +57,7 @@
           <td>{{percent}}%</td>
           <td>${{investorValue}}M</td>
           <td align="left">
-                <a href = "/view/{{id}}"><img width="30" src = "../static/file-black-512.png"></a>
+                <a href = "/viewprop/{{id}}"><img width="30" src = "../static/file-black-512.png"></a>
           </td>
       </tr>
       <tr>
