--- a/views/updateuser.hbs
+++ b/views/updateuser.hbs
@@ -1,7 +1,7 @@
 
 
-<div class="w3-panel w3-pale-green w3-leftbar
- w3-rightbar w3-topbar w3-border-green w3-margin-right w3-margin-left">
+<div class="w3-panel w3-pale-red w3-leftbar
+ w3-rightbar w3-topbar w3-border-red w3-margin-right w3-margin-left">
 <table width = "100%" border = 0 >
 
 <tr><td>
