--- a/views/viewprop.hbs
+++ b/views/viewprop.hbs
@@ -16,7 +16,6 @@
 </td></tr>
 
 <tr><td>
-  <br>
 {{message}}
 </td></tr>
 </table>
@@ -26,44 +25,108 @@
 <div class="w3-panel w3-pale-green w3-leftbar
  w3-rightbar w3-border-green w3-margin-right w3-margin-left">
 
-  <table width = "100%" border = 0>
+  <table width = "100%" border = 1>
         <colgroup>
         <col width="10%"/>
-        <col width="35%"/>
         <col width="5%"/>
-        <col width="15%"/>
-        <col width="20%"/>
-        <col width="15%"/>
+        <col width="30%"/>
+        <col width="5%"/>
+        <col width="25%"/>
+        <col width="10%"/>
+        <col width="10%"/>
         </colgroup>
 
-
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
       <tr>
-          <td align="center">ID: {{property.id}}</td>
-          <td align="left"><b>{{property.address}}, New York, {{zip}}</b></td>
+          <td align="center">Prop.Id: {{property.id}}</td>
           <td></td>
-          <td >{{property.units}} units</td>
-          <td>${{property.propValue}} M</td>
+          <td align="left"><b>{{property.address}}, New York, {{property.zip}}</b></td>
+          <td></td>
+          <td>Number of Units:</td>
+          <td>{{property.units}}</td>
+
           <td align="left"><a href = '/delete/{{property.id}}'><img width="45" src = "../static/trash-black-512.png"></a>
           </td>
       </tr>
+
       <tr>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
-          <td></td>
-          <td></td>
+          <td >Total Property Value (CAPM)</td>
+          <td><b>${{property.propValue}} M</b></td>
+
+          <td align="left"></td>
+      </tr>
+    </table>
+</div>
+ {{/if}}
+
+ <br>
+  &emsp;Investor List:
+ {{#if investors}}
+ {{#each investors}}
+ <div class="w3-panel w3-pale-green w3-leftbar
+  w3-rightbar w3-border-green w3-margin-right w3-margin-left">
+
+  <table width = "100%" border = 0>
+    <colgroup>
+    <col width="10%"/>
+    <col width="5%"/>
+    <col width="30%"/>
+    <col width="5%"/>
+    <col width="25%"/>
+    <col width="10%"/>
+    <col width="10%"/>
+    </colgroup>
+
+
+
+      <tr>
+          <td align="center">Inv. Id: {{user_id}}</td>
+          <td><img width='30' src={{photo}}></td>
+          <td align="left"><b>{{firstname}} {{lastname}}</b></td>
+          <td>  </td>
+          <td >{{percent}}%</td>
+          <td>${{investmentValue}}M</td>
+          <td align="left">
+                &nbsp;<a href = "/portfolio/{{user_id}}"><img width="30" src = "../static/file-black-512.png"></a>
+          </td>
       </tr>
 
       </table>
-</div>
-<br><br><br>
- {{/if}}
+ </div>
+ {{/each}}
+
+ <div class="w3-panel w3-pale-green w3-leftbar
+  w3-rightbar w3-bottombar w3-border-green w3-margin-right w3-margin-left">
+  <table width = "100%" border = 0>
+    <colgroup>
+    <col width="10%"/>
+    <col width="5%"/>
+    <col width="30%"/>
+    <col width="5%"/>
+    <col width="25%"/>
+    <col width="10%"/>
+    <col width="10%"/>
+    </colgroup>
+
+
+
+      <tr>
+        <td>{{message}}</td>
+        <td></td>
+        <td>Total Investors Ownership and Value</td>
+        <td></td>
+        <td><b>{{totalinvestorsownership}}%</b></td>
+        <td><b>${{totalinvestorsvalue}}M</b></td>
+        <td></td>
+      </tr>
+
+
+      </table>
+
+ </div>
+
+
+  {{/if}}
