--- a/views/home.hbs
+++ b/views/home.hbs
@@ -3,7 +3,7 @@
 <table width = "100%" border = 0 >
 
 <tr><td>
-  <font family = 'courier' size='5'><b>DealTrak</b> - Home</font>
+  <font family = 'courier' size='5'><b>DealTrak</b> - Home</font>&emsp;v.{{propsVersion}}
 </td><td align = "right">
 <a href = '/portfolio/{{userObj.id}}'>{{userObj.firstname}}</a>&emsp;<img width='50' src={{userObj.photo}}>
 </td></tr>
